--- a/src/eventCalendar.scss
+++ b/src/eventCalendar.scss
@@ -1,3 +1,6 @@
+md-event-calendar {
+  display: block;
+}
 .md-event-calendar {
   md-event-calendar-header {
     display: block;
@@ -16,6 +19,7 @@
       }
 
       .md-arrow {
+        cursor: pointer;
         &.md-left-arrow {
           transform: rotate(180deg);
         }
@@ -47,25 +51,30 @@
       flex: 1;
       display: flex;
       flex-direction: row;
-      border-top: 1px solid;
-
-      &:last-child {
-        border-bottom: 1px solid;
-      }
+      border-style: solid;
+      border-width: 0 0 1px 0;
 
       .md-event-calendar-month-cell {
         position: relative;
         flex: 1;
-        box-sizing: border-box;
-        border-left: 1px solid;
 
         &:last-child {
-          border-right: 1px solid;
+          border-style: solid;
+          border-width: 0 1px 0 0;
         }
 
 
         .md-event-calendar-month-cell-spacer {
           margin-top: 100%
+        }
+
+        .md-event-calendar-month-cell-divider {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          border-style: solid;
+          border-width: 0 1px 0 0;
         }
 
         .md-event-calendar-month-cell-content {
@@ -74,6 +83,7 @@
           bottom: 0;
           left: 0;
           right: 0;
+          overflow: hidden;
 
           .md-event-calendar-cell-data-label {
             font-size: 13px;
@@ -82,6 +92,13 @@
 
           .md-event-calendar-cell-event-spacer {
             margin: 4px 0 4px 0;
+          }
+
+          .md-event-calendar-cell-event-show-more {
+            font-size: 14px;
+            padding: 4px;
+            padding-left: 8px;
+            cursor: pointer;
           }
 
           .md-event-calendar-cell-event {
